# flex

./: .gitignore  README.org  meson.build  todo.org
flex/: app.cpp  app.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  canvas.cpp  canvas.hpp  config.hpp.in  drawable.hpp  engine.cpp  engine.hpp  event_handler.hpp  filesystem.hpp  flex.hpp  gltfmodel.cpp  gltfmodel.hpp  graphics.cpp  graphics.hpp  imgui.hpp  instancedgltfmodel.cpp  instancedgltfmodel.hpp  instancedmesh.cpp  instancedmesh.hpp  instancedmodel.cpp  instancedmodel.hpp  logging.cpp  logging.hpp  mesh.cpp  mesh.hpp  meson.build  model.cpp  model.hpp  scancodes.hpp  sprite.cpp  sprite.hpp  types.hpp  util.hpp  window.cpp  window.hpp
flex/gl/: buffer.cpp  buffer.hpp  framebuffer.cpp  framebuffer.hpp  gl.hpp  index_buffer.cpp  index_buffer.hpp  renderbuffer.cpp  renderbuffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  util.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp  vertex_layout.hpp
flex/input/: input.hpp  mousebutton.hpp
flex/keyboard/: keyboard.hpp  keycodes.hpp
game/: canvas_scene.cpp  canvas_scene.hpp  instancing_scene.cpp  instancing_scene.hpp  main.cpp  mesh_scene.cpp  mesh_scene.hpp  meson.build  sprite_scene.cpp  sprite_scene.hpp
resources/: simple.frag  simple.glslf  simple.glslv  simple.vert
resources/models/: cube.blend  cube.glb  cube.gltf  cube.mtl
resources/models/cube/: cube.blend  cube.mtl
resources/shaders/: simple.frag  simple.vert  simple_instanced.vert
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/imgui/: imgui_impl_sdl_gl3.cpp  meson.build
subprojects/soloud/: meson.build
subprojects/soloud/src/backend/sdl2_static/: soloud_sdl2_static.cpp
subprojects/stb_image/: meson.build
subprojects/tinygltf/: meson.build
